--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="tab_skill_iq">Skill IQ Leaders</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="country">Ghana</string>
+    <string name="learnighoursText">56 learning Hours,</string>
+    <string name="name_placeholder">Nafiu Lawal</string>
 </resources>
